# jogos_python

./: README.md  index.html
css/: styles.css
jogos_python/: README.md  dado.py  pyproject.toml  requirements.txt
jogos_python-1/: README.md
jogos_python-1/jogos/krunker_style_3d/: README.md  pyproject.toml  requirements.txt
jogos_python-1/jogos/krunker_style_3d/assets/models/characters/assaltantes/: female
jogos_python-1/jogos/krunker_style_3d/assets/models/characters/policiais/: male
jogos_python-1/jogos/krunker_style_3d/assets/models/weapons/: pistols  rifles
jogos_python-1/jogos/krunker_style_3d/assets/textures/: characters  weapons
jogos_python-1/jogos/krunker_style_3d/docs/: DESIGN.md
jogos_python-1/jogos/krunker_style_3d/examples/: demo_scene.py  run_local.py
jogos_python-1/jogos/krunker_style_3d/src/: assets_loader.py  engine.py  game.py  main.py  player.py  ui.py  weapon.py
jogos_python-1/jogos/krunker_style_3d/src/classes/: assaltantes.py  policiais.py
jogos_python-1/jogos/krunker_style_3d/tools/: model_exporters  texture_tools
jogos_python-1/jogos/krunker_style_3d/web/: index.html
jogos_python-1/jogos/krunker_style_3d/web/css/: styles.css
jogos_python-1/jogos/krunker_style_3d/web/js/: build_integration.js
jogos_python/jogos/new_game/: README.md  game.py
jogos_python/src/: main.py
jogos_python/tests/: test_new_game.py
js/: script.js
