[tool]
name = "jogos_python"
version = "0.1.0"
description = "A Python project for various games."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry]
dependencies = [
    # Add your project dependencies here
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"