[tool]
name = "krunker_style_3d"
version = "0.1.0"
description = "A 3D game inspired by Krunker, featuring characters and weapons."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
numpy = "^1.21.0"
pyopengl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"